unify some abbreviations

--- a/egbib.bib
+++ b/egbib.bib
@@ -605,7 +605,7 @@ author  = {Fukui, Akira and Park, Dong Huk and Yang, Daylen and Rohrbach, Anna a
  }
  
  @MISC{Fmeasure,
-  Title = {{Wikipedia. F-measure.}},
+  Title = {{F-measure.}},
   note = {{\sl http://en.wikipedia.org/wiki/F-measure}}
 }
 
@@ -870,4 +870,21 @@ pages = {4190--4203},
 year = {2017},
 publisher = {Curran Associates, Inc.},
 url = {http://papers.nips.cc/paper/7007-a-unified-game-theoretic-approach-to-multiagent-reinforcement-learning.pdf}
+}
+@inproceedings{yi2018neural,
+  title={Neural-symbolic vqa: Disentangling reasoning from vision and language understanding},
+  author={Yi, Kexin and Wu, Jiajun and Gan, Chuang and Torralba, Antonio and Kohli, Pushmeet and Tenenbaum, Josh},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={1039--1050},
+  year={2018}
+}
+@article{wang2018fvqa,
+  title={Fvqa: Fact-based visual question answering},
+  author={Wang, Peng and Wu, Qi and Shen, Chunhua and Dick, Anthony and van den Hengel, Anton},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={40},
+  number={10},
+  pages={2413--2427},
+  year={2018},
+  publisher={IEEE}
 }
